# astetik

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  README.md  pretty.pynb  pyproject.toml  requirements.txt  setup.py  test_local.sh  test_script.py  travis.yml
.github/workflows/: CI.yml  DEPLOY.yml  ci.yml  deploy.yml
astetik/: __init__.py  bars.py  color_picker.py  corr.py  freq.py  hist.py  histogram.py  kde.py  pie.py  scat.py  swarm.py  table.py  template.py  text.py  timeline.py  utils.py
astetik/extras/: clean_notebook.sh  countries.csv  table.html
astetik/plots/: __init__.py  animate.py  bar.py  bar1.py  bargrid.py  bars.py  bartwo.py  box.py  compare.py  corr.py  count.py  freq.py  grid.py  hist.py  kde.py  line.py  multicount.py  multikde.py  oned.py  overlap.py  pie.py  regs.py  roc.py  scat.py  strip.py  swarm.py  timeline.py  twod.py  vbar.py  violin.py  world.py
astetik/style/: color_picker.py  formats.py  legend.py  random_colors.py  sizer.py  style.py  template.py  titles.py
astetik/tables/: Untitled-1.html  ols.py  table.py  text.py
astetik/utils/: __init__.py  country_code.py  datetime.py  exceptions.py  gui.py  load_data.py  outliers.py  transform.py  utils.py
docs/: astetik_examples.rst  index.rst  pretty_examples.rst
examples/: pretty_examples.ipynb
old_versions/v.0.8/: setup.py
plots/: bubble.py
pretty/: __init__.py  bubble.py  correlation.py  data.py  descriptive.py  gui.py  kde.py  ols.py  prep.py  regression.py  swarm.py  text.py
v.0.8/: pretty.py
v.0.8/templates/: pretty.html
